--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@next/third-parties": "^15.3.2",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -17,9 +19,11 @@
     "eslint-config-next": "13.1.2",
     "n": "^9.0.1",
     "next": "14.2.15",
+    "postcss": "^8.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stable": "^0.1.8",
+    "tailwindcss": "^4.1.5",
     "typescript": "4.9.4"
   },
   "devDependencies": {
