--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "antd": "^5.25.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "n": "^9.0.1",
